27 September 2016: Wouter
	- tag for 1.5.10 release
	- trunk contains 1.5.11 in development.
	- Fix dnstap relaying "random" messages instead of resolver/forwarder
	  responses, from Nikolay Edigaryev.
	- Fix #836: unbound could echo back EDNS options in an error response.

20 September 2016: Wouter
	- iana portlist update.
	- Fix #835: fix --disable-dsa with nettle verify.
	- tag for 1.5.10rc1 release.

15 September 2016: Wouter
	- Fix 883: error for duplicate local zone entry.
	- Test for openssl init_crypto and init_ssl functions.

15 September 2016: Ralph
	- fix potential memory leak in daemon/remote.c and nullpointer
	  dereference in validator/autotrust.
	- iana portlist update.

13 September 2016: Wouter
	- Silenced flex-generated sign-unsigned warning print with gcc
	  diagnostic pragma.
	- Fix for new splint on FreeBSD.  Fix cast for sockaddr_un.sun_len.

9 September 2016: Wouter
	- Fix #831: workaround for spurious fread_chk warning against petal.c

5 September 2016: Ralph
	- Take configured minimum TTL into consideration when reducing TTL
	  to original TTL from RRSIG.

5 September 2016: Wouter
	- Fix #829: doc of sldns_wire2str_rdata_buf() return value has an
	  off-by-one typo, from Jinmei Tatuya (Infoblox).
	- Fix incomplete prototypes reported by Dag-Erling Smørgrav.
	- Fix #828: missing type in access-control-tag-action redirect results
	  in NXDOMAIN.

2 September 2016: Wouter
	- Fix compile with openssl 1.1.0 with api=1.1.0.

1 September 2016: Wouter
	- RFC 7958 is now out, updated docs for unbound-anchor.
	- Fix for compile without warnings with openssl 1.1.0.
	- Fix #826: Fix refuse_non_local could result in a broken response.
	- iana portlist update.

29 August 2016: Wouter
	- Fix #777: OpenSSL 1.1.0 compatibility, patch from Sebastian A.
	  Siewior.
	- Add default root hints for IPv6 E.ROOT-SERVERS.NET, 2001:500:a8::e.

25 August 2016: Ralph
	- Clarify local-zone-override entry in unbound.conf.5 
	
25 August 2016: Wouter